--- a/recipe-page/index.html
+++ b/recipe-page/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="static/css/styles.css">
-    <title>My Favorite Recipe</title>
-  </head>
-  <body>
-    <div class="top">
-      <h1>Spinach Artichoke Dip</h1>
-        <p class="description">The first time,  I tried Spinach Artichoke Dip was at Applebee's. I felt in love with it,  so I decided to recreate my own.
-        </p>
-    </div>
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" type="text/css" href="static/css/styles.css">
+  <title>My Favorite Recipe</title>
+</head>
+
+<body>
+  <div class="top">
+    <h1 class="title">Spinach Artichoke Dip</h1>
+    <p class="description">The first time, I tried Spinach Artichoke Dip was at Applebee's. I felt in love with it, so I decided to recreate my
+      own.
+    </p>
+  </div>
   <div class="left">
     <div>
-      <img src="https://tse1.mm.bing.net/th?id=OIP.p9txMccatVBpIWdGXZaU6AHaE7&w=297&h=197&c=7&o=5&dpr=2&pid=1.7" alt="Spinach Artihoke Dip" width="600px">
-      <p> <strong>Photo Credit:</strong> <a href="http://www.dishmaps.com/artichoke-spinach-dip/2951">Dish Maps</a>
-        </p>
+      <img src="https://tse1.mm.bing.net/th?id=OIP.p9txMccatVBpIWdGXZaU6AHaE7&w=297&h=197&c=7&o=5&dpr=2&pid=1.7" alt="Spinach Artihoke Dip"
+        width="600px">
+      <p>
+        <strong>Photo Credit:</strong>
+        <a href="http://www.dishmaps.com/artichoke-spinach-dip/2951">Dish Maps</a>
+      </p>
     </div>
     <div>
       <h2 class="ingredients">Ingredients</h2>
@@ -31,7 +37,9 @@
   </div>
   <div class="right">
     <div>
-      <h2><strong>Making the Dip</strong></h2>
+      <h2 class="title">
+        <strong>Making the Dip</strong>
+      </h2>
       <ol>
         <li>Preheat oven to 375</li>
         <li>Mix together paramesan cheese, spinach, and artihoke hearts</li>
@@ -41,18 +49,24 @@
       </ol>
     </div>
     <div>
-      <h2><strong>Other Recipes To Try</strong></h2>
-      <a href="http://www.myrecipes.com/recipe/hot-spinach-artichoke-dip-crab">How to make crab Spinach Artichoke Dip
-      </a>
-      <br>
-      <a  href="https://www.foodnetwork.com/recipes/alton-brown/hot-spinach-and-artichoke-dip-recipe-1912620">Hot Spinach Artichoke Dip
-      </a>
+      <h2 class="title">
+        <strong>Other Recipes To Try</strong>
+      </h2>
+      <div id="link">
+        <a href="http://www.myrecipes.com/recipe/hot-spinach-artichoke-dip-crab">How to make crab Spinach Artichoke Dip
+        </a>
+        <br>
+        <a href="https://www.foodnetwork.com/recipes/alton-brown/hot-spinach-and-artichoke-dip-recipe-1912620">Hot Spinach Artichoke Dip
+        </a>
+      </div>
     </div>
   </div>
 
   <div class="video">
-   <iframe width="600" height="315" src="https://www.youtube.com/embed/J9G99-5cqIY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
- </div>
+    <iframe width="600" height="315" src="https://www.youtube.com/embed/J9G99-5cqIY" frameborder="0" allow="autoplay; encrypted-media"
+      allowfullscreen></iframe>
+  </div>
 
 </body>
+
 </html>
